--- a/src/layout/Home/styles.css
+++ b/src/layout/Home/styles.css
@@ -10,6 +10,7 @@
     padding: 25px;
     border-radius: 0px 0px 25px 25px;
     background-color: #2a2a2d;
+    font-family: "Arimo";
 }
 
 .link {
