--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -5,4 +5,6 @@
     border: rgb(39, 38, 38) solid 5px;
     margin-inline: auto;
     padding: 25px;
+    text-align: center;
+    max-width: fit-content;
 }
