--- a/src/pages/TtR/styles.css
+++ b/src/pages/TtR/styles.css
@@ -2,3 +2,10 @@ a, a:hover, a:focus, a:active {
     text-decoration: none;
     color: inherit;
 }
+
+.ttr-main-container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
